# ERPv

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  erpv.yml
config/: admin.py  apps.py  context_processors.py  forms.py  models.py  notifications.py  serializers.py  services.py  signals.py  urls.py  views.py  webhooks.py
config/migrations/: 0001_initial.py  0002_pairedinstance.py  0003_alter_pairedinstance_api_key.py  0004_add_supplier_to_paired_instance.py  0005_add_customer_to_paired_instance.py  0006_notification_model.py  0007_webhook_models.py  0008_email_notifications.py  0009_add_price_update_notification_category.py  0010_alter_companyconfig_options.py
dashboards/: urls.py  views.py
docs/: api.md  finance.md  inventory.md  procurement.md  production.md  sales.md
finance/: admin.py  apps.py  models.py  services.py  signals.py  urls.py  views.py
finance/migrations/: 0001_initial.py
inventory/: admin.py  forms.py  models.py  serializers.py  services.py  urls.py  views.py
inventory/migrations/: 0001_initial.py  0002_remove_inventoryadjust_closed_and_more.py  0003_inventory_last_updated.py  0004_inventory_inventory_i_product_f4f8f8_idx_and_more.py  0005_inventory_required_cached.py  0006_product_description_product_image.py  0007_location_inventoryledger_location_inventorylocation.py  0008_stocktransfer.py  0009_product_sale_price.py  0010_add_catalogue_item_to_product.py  0011_allow_transfer_from_unallocated.py  0012_allow_transfer_to_unallocated.py  0013_alter_inventorylocation_unique_together_and_more.py  0014_add_sku_barcode_to_product.py  0015_inventoryadjust_created_by_and_more.py  0016_alter_inventoryledger_action.py  0017_alter_product_options_product_is_deleted.py
inventory/templatetags/: query_tags.py
main/: admin.py  audit.py  auth.py  constants.py  error_views.py  factories.py  logging_fmt.py  middleware.py  mixins.py  models.py  settings.py  test_urls.py  urls.py  utils.py  validators.py  views.py  wsgi.py
main/migrations/: 0001_initial.py
main/templatetags/: currency_tags.py  query_tags.py
procurement/: admin.py  apps.py  forms.py  models.py  serializers.py  services.py  urls.py  views.py
procurement/migrations/: 0001_initial.py  0002_alter_purchaseledger_supplier.py  0003_alter_supplierproduct_options_and_more.py  (+12 more)
production/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
sales/: admin.py  forms.py  models.py  serializers.py  services.py  urls.py  views.py
staff/: admin.py  models.py  urls.py  views.py
static/: styles.css
templates/: base.html  confirm_delete_base.html  dashboard.html  dashboard_base.html  home.html  navbar.html  robots.txt  search_results.html  sidemenu.html  sitemap.xml
tests/: conftest.py  test_accessibility.py  test_admin.py  test_api_auth_errors.py  test_audit.py  test_bom.py  test_catalogue_api.py  test_catalogue_import.py  test_config.py  test_config_notifications_price.py  test_coverage_gaps.py  test_dashboards.py  test_finance.py  test_form_hints.py  test_forms.py  test_integration_workflow.py  test_inventory.py  test_main.py  test_management_commands.py  test_models_and_signals.py  test_notifications.py  test_paired_instance.py  test_pairing_notifications.py  test_permissions.py  test_procurement.py  test_procurement_services.py  test_production.py  test_production_models.py  test_remote_notifications.py  test_sales.py  test_sales_models.py  test_supplier_product_notify.py  test_toasts.py  test_webhooks.py
(+173 files in other folders)
