[project]
name = "erpv"
version = "0.1.0"
description = "A full-featured ERP system built with Django"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.11",
    "brotli>=1.2",
    "cffi>=2.0",
    "confusable-homoglyphs>=3.3",
    "crispy-bootstrap5>=2026.3",
    "cssselect2>=0.9",
    "dj-database-url>=3.1",
    "Django>=6.0",
    "django-cors-headers>=4.9",
    "django-admin-inline-paginator>=0.4",
    "django-crispy-forms>=2.6",
    "django-registration>=5.2",
    "fonttools>=4.61",
    "gunicorn>=25.1",
    "httpx>=0.28",
    "pillow>=12.1",
    "psycopg2-binary>=2.9",
    "pycparser>=3.0",
    "pydyf>=0.12",
    "pyphen>=0.17",
    "python-dotenv>=1.2",
    "qrcode[pil]>=8.2",
    "sqlparse>=0.5",
    "tinycss2>=1.5",
    "tinyhtml5>=2.1",
    "weasyprint>=68.1",
    "webencodings>=0.5",
    "whitenoise>=6.12",
    "zopfli>=0.4",
    "django-ratelimit>=4.1",
    "djangorestframework>=3.17",
    "drf-spectacular>=0.29",
    "sentry-sdk>=2.57.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.9",
    "coverage>=7.13",
    "django-debug-toolbar>=6.2",
    "django-migration-linter>=6.0",
    "django-silk>=5.4",
    "django-stubs>=5.2",
    "factory_boy>=3.3",
    "Faker>=40.8",
    "gprof2dot>=2025.4",
    "mypy>=1.19",
    "pip-audit>=2.10",
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pytest-django>=4.11",
    "pytest-env",
    "pytest-xdist>=3.8",
    "ruff>=0.15",
]

[tool.coverage.run]
omit = [
    "config/management/commands/runngrok.py",
    "*/migrations/*",
    "manage.py",
    "main/settings.py",
    "main/wsgi.py",
    "main/asgi.py",
]

[tool.coverage.report]
omit = [
    "config/management/commands/runngrok.py",
    "*/migrations/*",
    "manage.py",
    "main/settings.py",
    "main/wsgi.py",
    "main/asgi.py",
]

[tool.ruff]
exclude = ["migrations", "htmlcov", "staticfiles"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
exclude = ["migrations", "htmlcov", "staticfiles"]
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "finance.views"
disable_error_code = ["misc", "attr-defined", "arg-type", "return-value", "override", "assignment", "union-attr", "operator", "type-var", "var-annotated"]

[[tool.mypy.overrides]]
module = "inventory.forms"
disable_error_code = ["union-attr", "attr-defined"]

[[tool.mypy.overrides]]
module = "inventory.admin"
disable_error_code = ["attr-defined", "return"]

[[tool.mypy.overrides]]
module = ["config.models", "inventory.models", "production.models"]
disable_error_code = ["assignment", "no-redef"]

[tool.django-stubs]
django_settings_module = "main.settings"
